[gd_scene load_steps=2 format=2]

[ext_resource path="res://Paths/FleetPath.gd" type="Script" id=1]

[node name="ShipPath" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="MousePolling" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShipRequestTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="MousePolling" to="." method="_on_MousePolling_timeout"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
[connection signal="timeout" from="ShipRequestTimer" to="." method="_on_ShipRequestTimer_timeout"]
